# AI-Console

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/systemd/: ai-console-agent-runtime-bridge.service  ai-console-agent-watcher.service
docs/: agent-registry-spec.md  technical-spec.md
scripts/: collect-system-json.py
src/qingluo_console/: __init__.py  collector_runner.py  db.py  main.py  models.py  monitoring.py
src/qingluo_console/agent_registry/: __init__.py  api.py  carriers.py  cli.py  discovery.py  models.py  repository.py  runtime_client.py  service.py
tests/: conftest.py  test_agent_carriers.py  test_agent_control_messages.py  test_agent_discovery.py  test_agent_registry.py  test_agent_workspace.py  test_agentctl.py  test_app.py  test_collector_runner.py  test_cpa_quota_api.py  test_cpa_quota_auth_files_shape.py  test_cpa_quota_collector.py  test_cpa_quota_nested_rate_limit.py  test_db_schema.py  test_docker_api.py  test_docker_collector.py  test_docker_collector_core_status.py  test_docker_unix_client.py  test_frontend.py  test_frontend_design.py  test_metrics_history.py  test_monitoring_flow.py  test_redaction.py  test_resources_api.py  test_resources_api_env.py  test_snapshots.py  test_status_model.py  test_summary_api.py  test_summary_redaction.py  test_system_collector.py  test_system_collector_network_sysfs.py  test_system_collector_script.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue  main.ts
(+41 files in other folders)
