[project]
name = "ai-console"
version = "0.1.0"
description = "Unified dashboard for infrastructure and AI services"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "httpx2>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
