[project]
name = "ai-console"
version = "0.1.0"
description = "Unified dashboard for infrastructure and AI services"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "httpx>=0.27",
]

[project.scripts]
agentctl = "qingluo_console.agent_registry.cli:main"
agent-runtime-bridge = "qingluo_console.runtime_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qingluo_console"]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.2",
  "httpx2>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
